--- a/src/visualiser/Visualiser.css
+++ b/src/visualiser/Visualiser.css
@@ -5,31 +5,37 @@ html {
 }
 
 .userinterface {
+    outline: 3px solid rgb(100, 100, 100);
     display: inline-block;
-    justify-content: left;
-    background-color: rgb(151, 143, 213);
-    border-color: rgb(0, 0, 0);
+    justify-content: center;
+    background-color: rgb(42, 42, 42);
+    border-radius: 10%;
     text-align: center;
     color: white;
 }
 
 .navbar {
     display: inline-block;
-
     color: white;
     font-family: 'Verdana', Arial, sans-serif;
     font-weight: bold;
-    font-size: large;
+    font-size: larger;
     padding: 20px;
     padding-left: 30px;
+    padding-right: 30px;
     text-decoration: none;
 }
 
+.navbar:hover {
+    color: rgb(151, 143, 213);
+}
+
 .button {
-    background-color: rgb(151, 143, 213);
+    background-color: rgb(42, 42, 42);
     border: none;
-    padding: 10px 25px;
+    padding: 10px 40px;
     font-weight: bold;
+    font-size: medium;
     text-align: center;
     display: inline-block;
     color: white;
@@ -37,16 +43,17 @@ html {
 }
 
 .button:hover {
-    background-color: rgb(188, 200, 156);
+    border-radius: 15px;
+    background-color: rgb(151, 143, 213);
 }
 
-
 .dropbtn {
+    border-radius: 15px;
     text-align: center;
     font-weight: bold;
-    background-color: rgb(151, 143, 213);
+    background-color: rgb(42, 42, 42);
     color: white;
-    padding: 10px 25px;
+    padding: 10px 45px;
     border: none;
 }
 
@@ -56,28 +63,33 @@ html {
   }
   
   /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
+.dropdown-content {
+padding: 10px;
+font-weight: bold;
+text-align: center;
+display: none;
+position: absolute;
+background-color: rgb(42, 42, 42);
+z-index: 2;
+border-radius: 10px;
+}
+  
+.dropdown-content-button {
+    background-color: rgb(42, 42, 42);
+    border: none;
+    padding: 10px 40px;
     font-weight: bold;
     text-align: center;
-    display: none;
-    position: absolute;
-    background-color: rgb(151, 143, 213);
-    min-width: 160px;
-    z-index: 2;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    border-radius: 5%;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-
-  /* Change color of dropdown links on hover */
-.dropdown-content a:hover {
-    background-color: #ddd;
+    display: inline-block;
+    color: white;
+    cursor: pointer;
 }
+
+.dropdown-content-button:hover {
+    border-radius: 15px;
+    background-color: rgb(151, 143, 213);
+}
+
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
@@ -87,19 +99,94 @@ html {
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-    background-color: rgb(188, 200, 156);
+    background-color: rgb(151, 143, 213);
+}
+
+.view-visited-container {
+    display: inline-block;
+    padding-right: 30px;
+    padding-left: 10px;
+    
+}
+
+.view-visited {
+    padding-left: 35px;
+    padding-top: 5px;
+    display: inline-block;
+    position: relative;
+    font-size: medium;
+    cursor: pointer;
+    font-family: sans-serif;
+    font-weight: bold;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+
+.view-visited input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+  /* Create a custom checkbox */
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    border-radius: 5px;
+    background-color: #eee;
+}
+
+.view-visited input ~ .checkmark {
+    background-color: #ccc;
+}
+  
+  /* When the checkbox is checked, add a blue background */
+.view-visited input:checked ~ .checkmark {
+    background-color: rgb(151, 143, 213);
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the checkmark when checked */
+.view-visited input:checked ~ .checkmark:after {
+    display: block;
+}
+
+/* Style the checkmark/indicator */
+.view-visited .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
 }
 
 .legend {
     width: 100%;
-    height: 5vh;
     text-align: center;
-    padding-top: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .visualise-button {
-    background-color: rgb(213, 151, 143);
-    border: 2px solid black;
+    background-color: rgb(207, 102, 121);
+    border: none;
     border-radius: 10px;
     padding: 10px 25px;
     font-weight: bold;
@@ -112,7 +199,7 @@ html {
 .grid {
     box-sizing: border-box;
     display: inline-block;
-    background-color: white;
+    background-color: rgb(102, 102, 102);
     font-size: 0;
     height: 100%;
     width: var(--screen-x)*30px;
@@ -120,8 +207,16 @@ html {
 
 .footer {
     font-family: 'Verdana', Arial, sans-serif;
-    background-color: rgb(151, 143, 213);
+    background-color: rgb(42, 42, 42);
     color: white;
     padding: 10px 25px;
     border: none;
+}
+
+.github-link {
+    color: white;
+}
+
+.github-link:hover {
+    color: rgb(151, 143, 213);
 }
